samples/_failures_safe/1761267567_72209f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_648c05a6.c: In function ‘main’:
./samples/SAFE/__tmp_648c05a6.c:200:47: error: ‘MAX’ undeclared (first use in this function)
  200 |     int token_count = tokenize(input, tokens, MAX
      |                                               ^~~
./samples/SAFE/__tmp_648c05a6.c:200:47: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_648c05a6.c:200:50: error: expected ‘)’ at end of input
  200 |     int token_count = tokenize(input, tokens, MAX
      |                               ~                  ^
      |                                                  )
./samples/SAFE/__tmp_648c05a6.c:200:5: error: expected declaration or statement at end of input
  200 |     int token_count = tokenize(input, tokens, MAX
      |     ^~~
